# titania-firmware

./: .gitignore  Cargo.toml  Justfile  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: baro.rs  buzz.rs  i2c_bus.rs  imu.rs  main.rs  rickroll.rs
