[package]
edition = "2024"
name = "titania-firmware"
version = "0.1.0"
license = "MIT"
publish = false
rust-version = "1.96.0"

[dependencies]
embassy-stm32 = { version = "0.6.0", features = ["defmt", "stm32l072cb", "unstable-pac", "time-driver-any", "exti", "memory-x", "low-power", "executor-thread"]  }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.6.0", features = ["defmt"] }
embassy-futures = { version = "0.1.2"}

defmt = "1.0.1"
defmt-rtt = "1.0.0"

embedded-storage = "0.3.1"
embedded-io = { version = "0.7.1" }
embedded-io-async = { version = "0.7.0" }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
heapless = { version = "0.9", default-features = false }
embedded-hal = "0.2.6"
static_cell = { version = "2" }
portable-atomic = { version = "1.5", features = ["unsafe-assume-single-core"] }

panic-reset = { version = "0.1.1" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.release]
opt-level = "z"
debug = false
strip = true
lto = true
codegen-units = 1
incremental = false

[package.metadata.embassy]
build = [
  { target = "thumbv6m-none-eabi", artifact-dir = "out/examples/stm32l0" }
]

[profile.dev]
opt-level = "s"   # or "z"
lto = "thin"
